Updated README with features section.

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,9 +1,10 @@
 = ripple-anaf
 
-This is similar to the `accepts_nested_attributes` functionality
-as found in AR.  This allows the use update attributes and create
-new child records through the parent.  It also allows the use of
-the `fields_for` form view helper, using a presenter pattern.
+This is inspired and similar implementation to the 
+`accepts_nested_attributes` functionality found in AR.  This allows
+the use update attributes and create new child records through the 
+parent.  It also allows the use of the `fields_for` form view helper, 
+using a presenter pattern.
 
 To enable in the model, call the class method, using the same
 relationship as defined in the `one` or `many`.
@@ -37,16 +38,20 @@ And in your views you can use fields_for:
       <% end %>
 
     <% end %>
-    
+   
+== Supported Features
+
+ * Same DSL for linked and embedded documents (except embedded many)
+ * :reject_if
+ * :allow_delete (soon)
+ * :update_only (soon)
 
 == Note on Patches/Pull Requests
  
 * Fork the project.
 * Make your feature addition or bug fix.
-* Add tests for it. This is important so I don't break it in a
-  future version unintentionally.
-* Commit, do not mess with rakefile, version, or history.
-  (if you want to have your own version, that is fine but bump version in a commit by itself I can ignore when I pull)
+* Add tests for it. This is important so I don't break it in a future version unintentionally.
+* Commit, do not mess with rakefile, version, or history. (if you want to have your own version, that is fine but bump version in a commit by itself I can ignore when I pull)
 * Send me a pull request. Bonus points for topic branches.
 
 == Copyright
